# fused-effects-region

./: CHANGELOG.md  README.md  fused-effects-regions.cabal
src/Control/Carrier/: Region.hs
src/Control/Effect/: Region.hs
test/: Test.hs  ex-file.conf  fname2.txt
