cabal-version:      2.2

name:               fused-effects-region
version:            0.1.0.0
synopsis:           Monadic regions with fused-effects.
description:        Provides an implementation of Monadic regions rough baed off Oleg Kiselyov's "Lightweight Monadic Regions"
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             riz0id
maintainer:         jacob@z-tech.org
copyright:          2020 Jacob Leach
category:           Control
build-type:         Simple
extra-source-files: CHANGELOG.md

tested-with:
  GHC == 8.8.3

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import:           common
  default-language: Haskell2010
  hs-source-dirs:   src
  exposed-modules:
      Control.Effect.Region
  build-depends:
      base >=4.13 && <4.14
    , fused-effects
    , fused-effects-exceptions
    , transformers

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  build-depends:
      base
    , fused-effects
    , fused-effects-exceptions
    , fused-effects-regions